2003-01-28  Vince Darley <vincentdarley@sourceforge.net>

	* tests/*.test: cleanup
	
	Also updated version of the package to 1.2 (not 1.1 since there's
	a Windows binary floating around with that number, and we want to
	avoid confusion).  It's been fixed at 1.0 for far too long.
	
2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl:  fixed bad mk4vfs::_umount change

2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/pkgIndex.tcl.in: mk4vfs 1.8, starkit 1.1, vfslib 1.3.1
	* library/pkgIndex.tcl: (shouldn't this be dropped from CVS now?)
	* library/mk4vfs.tcl:  updated from tclkit project
	* library/starkit.tcl: updated from tclkit project
	* library/vfslib.tcl:  updated from tclkit project

2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: only install pkgIndex.tcl for shared builds

2003-01-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl.in (new):
	* library/pkgIndex.tcl: Replace pkgIndex.tcl with one that is
	* configure:            generated by configure to include the right
	* configure.in:         vfs dll name.  Left the old one for
	* Makefile.in:          non-configure users, but it can be wrong.
	Also added tarvfs.tcl to list of files to install.

	* library/vfsUtils.tcl: code cleanup

2003-01-28  Vince Darley <vincentdarley@sourceforge.net>
	* library/*.tcl: add 'package provide vfs::<name>' to the
	virtual filesystems.  These are the current versions:
	
	package ifneeded vfs::ftp 1.0 
	package ifneeded vfs::http 0.5
	package ifneeded vfs::mk4 1.6 
	package ifneeded vfs::ns 0.5 
	package ifneeded vfs::tar 0.9
	package ifneeded vfs::test 1.0
	package ifneeded vfs::urltype 1.0
	package ifneeded vfs::webdav 0.1
	package ifneeded vfs::zip 1.0 
	
        I've used '0.1' to indicate a very preliminary version, 0.5 for
	something which has had some work, 0.9 for nearly complete and
	1.0 or newer for something which is well used.
	